--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
     "throng": "^4.0.0",
+    "tslib": "^1.11.0",
     "xmldom": "^0.2.1",
     "xpath": "0.0.27"
   },
