--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "trash dist && tsc",
     "watch": "tsc -w",
     "nodemon": "nodemon --config nodemon.json dist/index.js",
-    "dev": "npm run build && concurrently -k -c cyan,magenta npm:watch npm:nodemon"
+    "browser-sync": "browser-sync start --port 3000 --files ./dist/*.js --proxy localhost:5000 --reload-delay 200",
+    "dev": "npm run build && concurrently -k -c cyan,magenta,green npm:watch npm:nodemon npm:browser-sync"
   },
   "author": "",
   "license": "ISC",
@@ -23,8 +24,10 @@
     "xpath": "0.0.27"
   },
   "devDependencies": {
+    "@types/browser-sync": "^2.26.1",
     "@types/express": "^4.17.2",
     "@types/xmldom": "^0.1.29",
+    "browser-sync": "^2.26.7",
     "concurrently": "^5.1.0",
     "nodemon": "^2.0.2",
     "trash-cli": "^3.0.0",
